<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="settings_blackStyle">Темная тема</string>
    <string name="settings_share">Поделиться приложением</string>
    <string name="settings_support">Написать в поддержку</string>
    <string name="settings_userAgreement">Пользовательское соглашение</string>
    <string name="address_AndroidDevelopment">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="myEmailForSupportService">kuliev_nik@inbox.ru</string>
    <string name="mailThemeForSupportService">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mailTextForSupportService">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="editTextHint">Поиск</string>
    <string name="mockTrackName">TrackName</string>
    <string name="mockArtistName">Artist</string>
    <string name="mockTrackTime">00:00</string>
    <string name="updateSearchButton">Обновить</string>
    <string name="errorSearchInternetTextView">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="emptySearchTextView">Ничего не нашлось</string>
    <string name="searchHistoryTextView">Вы искали</string>
    <string name="searchHistoryButton">Очистить историю</string>
    <string name="sharingMethod">Выберите приложение</string>
    <string name="countryField">Страна</string>
    <string name="primaryGenreNameField">Жанр</string>
    <string name="releaseDateField">Год</string>
    <string name="collectionNameField">Альбом</string>
    <string name="trackTimeField">Длительность</string>
    <string name="listenedTime">00:00</string>
    <string name="trackName">Название трека</string>
    <string name="artistName">Название группы</string>
    <string name="emptyFavoriteTracks">Ваша медиатека пуста</string>
    <string name="emptyPlaylist">Вы не создали\nни одного плейлиста</string>
    <string name="addNewPlaylist">Новый плейлист</string>
    <string name="favoritesTracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="nameNewPlaylist">Название*</string>
    <string name="descriptionNewPlaylist">Описание</string>
    <string name="addToPlaylist">Добавить в плейлист</string>
    <string name="create">Создать</string>
    <string name="mockAlbumName">AlbumName</string>
    <string name="mockAlbumCountTracks">** tracks</string>
    <string name="DirectoryImagePlaylist">my_Album</string>
    <string name="jpg">.jpg</string>
    <string name="finishCreatingPlaylist">Завершить создание плейлиста?</string>
    <string name="lostData">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="end">Завершить</string>
    <string name="imageType">image/*</string>

    <plurals name="track">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d трека</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минуты</item>
    </plurals>

    <string name="mockAlbumDescription">AlbumDescription</string>
    <string name="mockTracksTime">300 минут</string>
    <string name="mockTracksCount">100 треков</string>
    <string name="DeleteTrack">Хотите удалить трек?</string>
    <string name="NO">НЕТ</string>
    <string name="YES">ДА</string>
    <string name="shareEmptyTrackList">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_apk">Share APK</string>
    <string name="share">Поделиться</string>
    <string name="deletePlaylist">Удалить плейлист</string>
    <string name="editInformation">Редактировать информацию</string>
    <string name="dialogdeletePlaylist">"Хотите удалить плейлист "</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="emptyTrackList">В плейлисте нет треков</string>
    <string name="player">player</string>
    <string name="trackAlreadyAddedInPlaylist">Трек уже добавлен в плейлист %1$s</string>
    <string name="addedInPlaylist">Добавлено в плейлист %1$s</string>
</resources>