<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".settings.ui.activity.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/returnFromSettings"
            style="@style/toolbarTextView"
            android:text="@string/main_button_settings" />

    </LinearLayout>


    <LinearLayout style="@style/SettingsLinearLayout">

        <TextView
            style="@style/SettingsTextView"
            android:text="@string/settings_blackStyle" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchDayNight"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:theme="@style/SwitchTheme" />
    </LinearLayout>

    <LinearLayout style="@style/SettingsLinearLayout">

        <TextView
            style="@style/SettingsTextView"
            android:text="@string/settings_share" />

        <ImageView
            android:id="@+id/shareApplication"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/share" />
    </LinearLayout>

    <LinearLayout style="@style/SettingsLinearLayout">

        <TextView
            style="@style/SettingsTextView"
            android:text="@string/settings_support" />

        <ImageView
            android:id="@+id/sendToSupport"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/support" />
    </LinearLayout>

    <LinearLayout style="@style/SettingsLinearLayout">

        <TextView
            style="@style/SettingsTextView"
            android:text="@string/settings_userAgreement" />

        <ImageView
            android:id="@+id/openUserAgreement"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/arrowforward" />
    </LinearLayout>

</LinearLayout>