<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".media_libraries.ui.fragment.NewPlaylistFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/returnFromSearch"
            style="@style/toolbarTextView"
            android:text="@string/addNewPlaylist"
            app:drawableLeftCompat="@drawable/arrowback" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageNewPlaylist"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/dash_stroke_rectangle"
        android:src="@drawable/add_photo"/>
    
    <EditText
        android:id="@+id/nameNewPlaylist"
        android:hint="@string/nameNewPlaylist"
        style="@style/EditTextNewPlaylist"/>

    <EditText
        android:id="@+id/descriptionNewPlaylist"
        android:hint="@string/descriptionNewPlaylist"
        style="@style/EditTextNewPlaylist"/>

    <Button
        android:id="@+id/buttonNewPlaylist"
        android:layout_width="match_parent"
        android:layout_height="44dp" />


</LinearLayout>