<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".search.ui.fragment.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/returnFromSearch"
            style="@style/toolbarTextView"
            android:text="@string/search" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_magnifier"
            app:tint="@color/editTextColorHint" />

        <EditText
            android:id="@+id/inputEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="0.9"
            android:background="@null"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/editTextHint"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/yp_black"
            android:textColorHint="@color/editTextColorHint"
            android:textCursorDrawable="@drawable/cursor_edit_text"
            android:textFontWeight="400"
            android:textSize="@dimen/medium_textSize" />

        <ImageView
            android:id="@+id/clearSearchBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            app:tint="@color/editTextColorHint" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ProgressBar android:id="@+id/progressBar"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginTop="120dp"
                android:indeterminateTint="@color/yp_blue"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/searchHistoryTextView"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center"
                android:text="@string/searchHistoryTextView"
                android:textColor="@color/textColor"
                android:textSize="@dimen/large_textSize"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleViewTrack"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/track_view" />

            <Button
                android:id="@+id/searchHistoryButton"
                style="@style/SearchButtons"
                android:layout_width="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/searchHistoryButton"
                android:maxLines="1"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/errorSearchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/errorSearchImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="102dp"
                android:src="@drawable/errorinternet" />

            <TextView
                android:id="@+id/errorSearchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center_horizontal"
                android:text="@string/errorSearchInternetTextView"
                android:textColor="@color/textColor"
                android:textFontWeight="500"
                android:textSize="@dimen/large_textSize" />

            <Button
                android:id="@+id/updateSearchButton"
                style="@style/SearchButtons"
                android:layout_width="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@string/updateSearchButton" />

        </LinearLayout>
    </FrameLayout>
</LinearLayout>